--- a/WMS/Views/Theme/Default/Products/_ProductDocumentsDetails.cshtml
+++ b/WMS/Views/Theme/Default/Products/_ProductDocumentsDetails.cshtml
@@ -9,14 +9,14 @@
 @Html.DevExpress().GridView(
     settings =>
     {
-        settings.Name = "ProductFileDetailGridView" + ViewBag.productid;
+        settings.Name = "ProductFileDetailGridView_" + ViewBag.productid;
         var gridName = settings.Name;
         settings.KeyFieldName = "Id";
         settings.Width = Unit.Percentage(100);
         settings.CallbackRouteValues = new { Controller = "Products", Action = "_ProductDocumentsDetails", id = ViewBag.productid };
         settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Products", Action = "SaveProductFiles" };
         settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
-        settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
+        settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Row;
         settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.DblClick;
         settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
 
@@ -35,15 +35,11 @@
             column.FieldName = "ProductMaster.Name";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "FilePath";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
-
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "SortOrder";
@@ -78,10 +74,6 @@
                 p.ClientSideEvents.CheckedChanged = string.Format("function(s,e){{ OnDetailsChanged(s,e,{0});}}", gridName);
             });
         });
-
-
-
-
         settings.CellEditorInitialize = (s, e) =>
         {
             ASPxEdit editor = (ASPxEdit)e.Editor;
@@ -89,6 +81,5 @@
         };
 
         settings.ClientSideEvents.BeginCallback = String.Format("function(s,e){{ OnBeginGridCallback(s, e, {0}); }}", gridName);
-        settings.ClientSideEvents.FocusedCellChanging = "OnSpecialPricesGridFocusChanged";
-        settings.ClientSideEvents.EndCallback = String.Format("function(s,e){{ OnEndGridCallback(s, e, {0}); }}", gridName);
+
     }).Bind(Model).GetHtml()
