--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -579,7 +579,7 @@ footer p {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(images/loading.gif) center no-repeat;
+    background: url(../../images/loading.gif) center no-repeat;
     background-color: rgba(255, 255, 255, 0.5);
 }
 
