--- a/WMS/Views/Theme/Default/WebsiteNavigations/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Create.cshtml
@@ -29,21 +29,12 @@
     ViewBag.Title = "Add Navigation for Website";
 }
 <script type="text/javascript">
-    function submitformNav() {
-        if ($("#Type").val() == "3") {
-            var productids = $("#SelectedProductIds").val();
-            if (productids == null || productids == "" || productids == undefined) {
-                alert("Select product first");
-                return false;
-            }
-            $("#ProductsWithIds").val(productids);
-        }
-    }
+
     function onFileUploadComplete(s, e) {
         if (e.callbackData) {
             $("#dvfiles").show();
             var fileData = e.callbackData.split('|');
-            var Fileobj = { FileName: fileData};
+            var Fileobj = { FileName: fileData };
             var result = $("#uploaderdefaultImage").tmpl(Fileobj);
             $("#dvfiles").append(result);
             $('.se-pre-con').hide();
@@ -127,7 +118,7 @@
 
 </script>
 <h2><span>Add Website Navigation</span></h2>
-@using (Html.BeginForm("Create", "WebsiteNavigations", FormMethod.Post, new { @class = "form-navigation", onsubmit = "return submitformNav()" }))
+@using (Html.BeginForm("Create", "WebsiteNavigations", FormMethod.Post, new { @class = "form-navigation" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.SelectedProductIds)
@@ -136,7 +127,7 @@
     <div class="col-md-12">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="col-md-5 p-0 pull-left mb-2">
+        <div class="col-md-4 p-0 pull-left mb-2">
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
@@ -222,9 +213,9 @@
             </div>
 
         </div>
-        <div class="col-md-7 p-0 pull-left mb-2">
+        <div class="col-md-8 p-0 pull-left mb-2">
             <div class="ProductsShow" style="display:none;">
-                @Html.Action("_NavigationProductList",new { SiteId= ViewBag.SiteId })
+                @*@Html.Action("_NavigationProductList",new { SiteId= ViewBag.SiteId })*@
             </div>
         </div>
 
@@ -232,8 +223,8 @@
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
         <div class="col-md-offset-2 col-md-10 bottom-right">
-            <input type="submit"  class="btn btn-primary" value="Create" />
-            <div class="back-list">@Html.ActionLink("Back to List", "Index", new {SiteId= (int)ViewBag.siteid }, new { @class = "btn btn-default" })</div>
+            <input type="submit" class="btn btn-primary" value="Create" />
+            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = (int)ViewBag.siteid }, new { @class = "btn btn-default" })</div>
         </div>
     </div>
 
