--- a/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
@@ -1,40 +1,39 @@
-﻿
-@{
+﻿@{
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "ProductWebNavGridView";
-        settings.CallbackRouteValues = new { Controller = ViewBag.Controller, Action = "_NavigationProductList", SiteId= ViewBag.SiteId };
+        settings.CallbackRouteValues = new { Controller = ViewBag.Controller, Action = "_NavigationProductList", SiteId = ViewBag.SiteId, navigationId = ViewBag.NavigationId };
+        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = ViewBag.Controller, Action = "SaveNavigationProductList", SiteId = ViewBag.SiteId, navigationId = ViewBag.NavigationId };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
         settings.CustomBindingRouteValuesCollection.Add(
             GridViewOperationType.Paging,
-            new { Controller = ViewBag.Controller, Action = "_NavigationProductList", SiteId = ViewBag.SiteId }
+            new { Controller = ViewBag.Controller, Action = "_NavigationProductListPaging", SiteId = ViewBag.SiteId, navigationId = ViewBag.NavigationId }
         );
 
         settings.CustomBindingRouteValuesCollection.Add(
         GridViewOperationType.Filtering,
-        new { Controller = ViewBag.Controller, Action = "_NavigationProductList",SiteId = ViewBag.SiteId }
+        new { Controller = ViewBag.Controller, Action = "_NavigationProductListFiltering", SiteId = ViewBag.SiteId, navigationId = ViewBag.NavigationId }
         );
 
         settings.CustomBindingRouteValuesCollection.Add(
         GridViewOperationType.Sorting,
-        new { Controller = ViewBag.Controller, Action = "_NavigationProductList", SiteId = ViewBag.SiteId }
+        new { Controller = ViewBag.Controller, Action = "_NavigationProductListSorting", SiteId = ViewBag.SiteId, navigationId = ViewBag.NavigationId }
         );
 
         settings.Settings.ShowFilterBar = GridViewStatusBarMode.Visible;
-        settings.KeyFieldName = "ProductId";
+        settings.KeyFieldName = "Id";
 
         settings.Settings.ShowHeaderFilterButton = false;
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowSelectCheckbox = true;
         settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
         settings.SettingsPopup.HeaderFilter.Height = 200;
         settings.Settings.ShowFilterRow = true;
-        settings.SettingsBehavior.AllowFocusedRow = true;
         settings.Styles.Header.CssClass = "";
-        //settings.ClientSideEvents.DetailRowExpanding = "function(s,e){ OnDetailsRowExpanding(s,e); }";
-        //settings.ClientSideEvents.BeginCallback = "function(s,e){ OnProcessedDetailCallback(s,e); }";
-        settings.ClientSideEvents.SelectionChanged = "SelectionChangeds";
+
+        settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
+        settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
+        settings.SettingsEditing.BatchEditSettings.StartEditAction = GridViewBatchStartEditAction.DblClick;
+        settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
 
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -46,68 +45,77 @@
 
         settings.Columns.Add(c =>
         {
+            c.FieldName = "ProductId";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(c =>
+        {
             c.FieldName = "Name";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.True;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
         settings.Columns.Add(c =>
         {
             c.FieldName = "SKUCode";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        });
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "BarCode";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        });
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "BarCode2";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        });
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "Location";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "ProductGroupName";
-            c.Caption = "Group";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        });
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "ProductCategoryName";
-            c.Caption = "Category";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(c =>
         {
             c.FieldName = "DepartmentName";
             c.Caption = "Department";
             c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "ProductGroupName";
+            c.Caption = "Group";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "ProductCategoryName";
+            c.Caption = "Category";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "IsActive";
+            c.Caption = "Active";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.EditorProperties().CheckBox(p =>
+            {
+                p.ClientSideEvents.ValueChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ValidationSettings.Display = Display.Dynamic;
+                p.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.None;
+            });
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "SortOrder";
+            c.Caption = "Sort Order";
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.EditorProperties().SpinEdit(p =>
+            {
+                p.MinValue = 0;
+                p.MaxValue = 1000000000;
+                p.ClientSideEvents.ValueChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+            });
         });
 
-
-        if (ViewData["NaviagtionProduct"] != null)
-        {
-            var data= (List<int>)ViewData["NaviagtionProduct"];
-            settings.PreRender = (s, e) =>
-            {
-                var grids = (MVCxGridView)s;
-                foreach (int item in data)
-                {
-                    grids.Selection.SelectRowByKey(item);
-                }
-
-            };
-        }
-
-        settings.ClientSideEvents.FocusedRowChanged = "OnGridFocusedRowChanged";
-        settings.ClientSideEvents.BeginCallback = "OnStartCallback";
-        settings.ClientSideEvents.EndCallback = "OnGridEndCallBack";
+        settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginGridCallback(s, e); }";
+        settings.ClientSideEvents.FocusedCellChanging = "OnSpecialPricesGridFocusChanged";
+        settings.ClientSideEvents.EndCallback = "OnEndGridCallback";
 
         settings.SettingsPager.PageSizeItemSettings.Visible = true;
         settings.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
