--- a/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
@@ -41,50 +41,50 @@
     function OnGridFocusedRowChanged(s, e) {
         $('.selkey').val(s.GetRowKey(s.GetFocusedRowIndex()));
     }
-    function PublishProductForWebSite() {
-        var selectedIds = $("#SelectedProductIds").val();
-        var SiteId = $("#SiteId").val();
-        if (selectedIds.length <= 0) { alert("Please select product first"); return; }
-        LoadingPanel.Show();
-        $.ajax({
-            type: "POST",
-            url: '/ProductsWebsitesMaps/Create/',
-            data: { ProductIds: selectedIds, siteId: SiteId },
-            dataType: 'json',
-            success: function (data) {
+    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginGridCallback);
 
-                if (data) {
-                    ProductWebMapsGridView.Refresh();
-                    $("#infoMsg").html("Products published").show();
-                    $('#infoMsg').delay(2000).fadeOut();
-                }
-                else {
-                    $("#infoMsg").html("These products already published").show();
-                    $('#infoMsg').delay(2000).fadeOut();
-                }
-                LoadingPanel.Hide();
+    function OnBeginGridCallback(s, e) {
+        debugger;
+        e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("frmPriceGroupPrices");
+        var rowIndex = parseInt($("#RowIndexForProductId").val()) || 0;
+        e.customArgs["ProductID"] = ProductWebsiteGridView.GetRowKey(rowIndex);
+    }
 
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                LoadingPanel.Hide();
-                alert('Error' + textStatus + "/" + errorThrown);
-            }
-        });
+    function OnEndGridCallback(s, e) {
+        debugger;
+        var lastIndex = parseInt($("#LastEditingRowIndex").val()) || 0;
+        SetGridEditorToRowIndex(lastIndex);
+    }
 
+    function SetGridEditorToRowIndex(index) {
+        ProductWebsiteGridView.batchEditApi.StartEdit(index, ProductWebsiteGridView.GetColumnByField($("#LastEditingColIndex").val()).index);
+    }
 
+    function OnDetailsChanged(s, e) {
+        debugger;
+        ProductWebsiteGridView.UpdateEdit();
+    }
+
+    function OnSpecialPricesGridFocusChanged(s, e) {
+        if (e.cellInfo.rowVisibleIndex >= 0) {
+            $("#LastEditingRowIndex").val(e.cellInfo.rowVisibleIndex);
+        }
+
+        $("#RowIndexForProductId").val(e.cellInfo.rowVisibleIndex);
+        $("#LastEditingColIndex").val(e.cellInfo.column.fieldName);
     }
 </script>
+
+@Html.Hidden("LastEditingRowIndex")
+@Html.Hidden("LastEditingColIndex")
+@Html.Hidden("RowIndexForProductId")
+
 @Html.Hidden("selkey")
 @Html.Hidden("SelectedProductIds")
 @Html.Hidden("SiteId", (int)ViewBag.siteid)
 <div>
-    @Html.Action("ProductList")
+    @Html.Action("WebsiteProductsList")
     <div class='col-md-offset-2 col-md-10 bottom-right'>
-
-        @if (WMS.Helpers.LayoutHelpers.ActivityValidator("PurchaseOrders", "Create"))
-        {
-            <input type="button" class="btn btn-primary" value="Publish Product" onclick="PublishProductForWebSite()" />
-        }
         <div class="back-list">
             <a href="@Url.Action("Index","TenantWebsites")" class="btn btn-default">Back to List</a>
         </div>
