--- a/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
@@ -72,7 +72,7 @@
         }
     }
 
-    //MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginGridCallback);
+    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginGridCallback);
 
     function OnBeginGridCallback(s, e) {
         debugger;
@@ -88,7 +88,7 @@
     }
 
     function SetGridEditorToRowIndex(index) {
-        //ProductWebNavGridView.batchEditApi.StartEdit(index, ProductWebNavGridView.GetColumnByField($("#LastEditingColIndex").val()).index);
+        ProductWebNavGridView.batchEditApi.StartEdit(index, ProductWebNavGridView.GetColumnByField($("#LastEditingColIndex").val()).index);
     }
 
     function OnDetailsChanged(s, e) {
