--- a/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Create.cshtml
@@ -1,76 +1,90 @@
 ﻿@model Ganedata.Core.Entities.Domain.WebsiteContentPages
+@using Ganedata.Core.Entities.Helpers
+@using Ganedata.Core.Services;
+
 
 @{
     ViewBag.Title = "Create";
 }
 
- <h2><span>Add Website Content Page</span></h2>
+@section scripts {
 
-@using (Html.BeginForm()) 
+    @Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionType = ExtensionType.HtmlEditor, Theme = GaneStaticAppExtensions.DevexTheme }
+        )
+
+    @Html.DevExpress().GetScripts(
+        new Script { ExtensionType = ExtensionType.HtmlEditor }
+        )
+}
+
+<h2><span>Add Website Content Page</span></h2>
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(model=>model.SiteID,(int)ViewBag.SiteId)
-<div class="col-md-12">
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.SiteID, (int)ViewBag.SiteId)
+    <div class="col-md-12">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.MetaTitle, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.MetaTitle, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.MetaTitle, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.MetaTitle, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.MetaTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MetaTitle, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.MetaDescription, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.MetaDescription, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.MetaDescription, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.MetaDescription, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.MetaDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MetaDescription, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.Contant, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.Contant, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                @Html.Partial("~/Views/Theme/Default/DevexHelper/PlaceholdersHtmlEditorPartial.cshtml", new HtmlEditorModel() { HtmlContent = Model.Contant, EditorName = "Contant", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
+                @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.SortOrder, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            @Html.EditorFor(model => model.SortOrder, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SortOrder, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.SortOrder, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.SortOrder, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SortOrder, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="input-group h-100 justify-content-center align-items-center">
-        @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
-        <div class="col-md-8">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.IsActive)
-                @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-8">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.IsActive)
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+
+        <div class="input-group h-100 justify-content-center align-items-center">
+            <div class="col-md-offset-2 col-md-10 bottom-right">
+                <input type="submit" class="btn btn-primary" value="Create" />
+                <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = ViewBag.SiteId }, new { @class = "btn btn-default" })</div>
             </div>
         </div>
     </div>
-
-
-    <div class="input-group h-100 justify-content-center align-items-center">
-        <div class="col-md-offset-2 col-md-10 bottom-right">
-            <input type="submit" class="btn btn-primary" value="Create" />
-            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = ViewBag.SiteId }, new { @class = "btn btn-default" })</div>
-        </div>
-    </div>
-</div>
 }
 
