--- a/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
@@ -1,9 +1,22 @@
 ﻿@model Ganedata.Core.Entities.Domain.WebsiteContentPages
+@using Ganedata.Core.Entities.Helpers
+@using Ganedata.Core.Services;
+
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
+@section scripts {
+
+    @Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionType = ExtensionType.HtmlEditor, Theme = GaneStaticAppExtensions.DevexTheme }
+        )
+
+    @Html.DevExpress().GetScripts(
+        new Script { ExtensionType = ExtensionType.HtmlEditor }
+        )
+}
 <h2><span>Edit Website Content Page</span></h2>
 
 @using (Html.BeginForm())
@@ -41,7 +54,7 @@
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(model => model.Contant, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Partial("~/Views/Theme/Default/DevexHelper/PlaceholdersHtmlEditorPartial.cshtml", new HtmlEditorModel() { HtmlContent = Model.Contant, EditorName = "Contant", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
                 @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
             </div>
         </div>
