update edit product navigation map Imported from Changeset 2488

--- a/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
@@ -109,7 +109,7 @@
             {
                 p.MinValue = 0;
                 p.MaxValue = 1000000000;
-                p.ClientSideEvents.ValueChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
             });
         });
 
