--- a/WMS/Views/Theme/Default/WebsiteSliders/Index.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Index.cshtml
@@ -43,7 +43,10 @@
     {
         @Html.ActionLink("Delete", "Delete", null, new { @class = "btn btn-primary  Caction" })
     }
-    <div class="back-list">
-        <a href="@Url.Action("Index","TenantWebsites")" class="btn btn-default">Back to List</a>
+    <div class='col-md-offset-2 col-md-10 bottom-right'>
+        <div class="back-list">
+            <a href="@Url.Action("Index","TenantWebsites")" class="btn btn-default">Back to List</a>
+        </div>
+
     </div>
 </div>
