--- a/WMS/Views/Theme/Default/Shared/_GRPopup.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_GRPopup.cshtml
@@ -3,7 +3,7 @@
     {
         settings.Name = "ModelGoodsReturn";
         settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
-        settings.CallbackRouteValues = new { Controller = "InventoryTransaction", Action = (Request.UrlReferrer==null || !Request.UrlReferrer.AbsolutePath.ToLower().Contains("wastedgoodsreturn"))? "_WastageGoodsReturn" : "_GoodsReturn", Method = "GET" };
+        settings.CallbackRouteValues = new { Controller = "InventoryTransaction", Action = (Request.UrlReferrer == null || !Request.UrlReferrer.AbsolutePath.ToLower().Contains("wastedgoodsreturn")) ? "_WastageGoodsReturn" : "_GoodsReturn", Method = "GET" };
         settings.Width = 700;
         settings.Height = 500;
         settings.AllowDragging = true;
@@ -19,6 +19,31 @@
         settings.EnableClientSideAPI = true;
         settings.ClientSideEvents.BeginCallback = "beginGRCallBack";
         settings.ClientSideEvents.EndCallback = "function(s,e){ initialiseSeriesGenerateActions(s,e);}";
+
+        //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+    }).GetHtml()
+
+@Html.DevExpress().PopupControl(
+    settings =>
+    {
+        settings.Name = "ModelProductNavigationMap";
+        settings.LoadContentViaCallback = LoadContentViaCallback.OnFirstShow;
+        settings.CallbackRouteValues = new { Controller = "WebsiteNavigations", Action = "CreateProductNavigation" };
+        settings.Width = 1000;
+        settings.Height = 750;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.None;
+        settings.ShowHeader = true;
+        settings.HeaderText = " ";
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ScrollBars = System.Web.UI.WebControls.ScrollBars.Vertical;
+        settings.EnableClientSideAPI = true;
+        settings.ClientSideEvents.BeginCallback = "beginGRCallBack";
 
         //settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
     }).GetHtml()
